<resources>
    <string name="app_name">control_lesson1</string>
    <string name="contact_icon">Иконка контакта</string>
    <string name="contact_title">Контакт</string>
    <string name="contact_name">Иван Иванов</string>
    <string name="phone_icon">Иконка телефона</string>
    <string name="phone_label">Телефон:</string>
    <string name="phone_number">+7 (999) 123-45-67</string>
    <string name="email_icon">Иконка email</string>
    <string name="email_label">Email:</string>
    <string name="email_address">ivan.ivanov@example.com</string>
    <string name="call_button">Позвонить</string>
    <string name="message_button">Сообщение</string>
    <string name="favorite_text">Добавить в избранное</string>
</resources>